--- a/astro/src/layouts/BaseLayout.astro
+++ b/astro/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 const { title = "Tomás Sasovsky - Portfolio" } = Astro.props;
+import PageInteractions from "../components/PageInteractions.astro";
 ---
 
 <html lang="en">
@@ -30,8 +31,23 @@ const { title = "Tomás Sasovsky - Portfolio" } = Astro.props;
   <body>
     <slot />
 
-    <!-- custom js link -->
-    <script src="/assets/js/script.js" is:inline></script>
+    <div class="modal-container" data-modal-container>
+      <div class="overlay" data-overlay></div>
+      <section class="testimonials-modal">
+        <button class="modal-close-btn" data-modal-close-btn>
+          <ion-icon name="close-outline"></ion-icon>
+        </button>
+        <div class="modal-content">
+          <h4 class="h3 modal-title" data-modal-title></h4>
+          <time datetime=""></time>
+          <div class="modal-text" data-modal-text>
+            <p></p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <PageInteractions />
 
     <!-- ionicon link -->
     <script
