--- a/src/components/SiteNavbar.astro
+++ b/src/components/SiteNavbar.astro
@@ -18,5 +18,16 @@ import { navItems } from "../data/nav";
         </li>
       ))
     }
+    <li class="navbar-item">
+      <button
+        class="navbar-link theme-toggle"
+        type="button"
+        data-theme-toggle
+        aria-label="Toggle theme"
+      >
+        <ion-icon class="icon-sun" name="sunny-outline"></ion-icon>
+        <ion-icon class="icon-moon" name="moon-outline"></ion-icon>
+      </button>
+    </li>
   </ul>
 </nav>
